--- a/padaria.html
+++ b/padaria.html
@@ -9,7 +9,7 @@
 </head>
 <body>
     <div class="secao">
-        <img class="img-logotipo" src="logo.png" alt="Logotipo Padaria Plus">
+        <img class="img-logotipo" src="./img/logo.png" alt="Logotipo Padaria Plus">
         <p>
             <a href="#sobre">Sobre</a>
             <a href="#produtos">Produtos</a>
@@ -24,7 +24,7 @@
         <h2>
             Desde 2001, o lugar mais gostoso da cidade
         </h2>
-        <img class="imagem-banner" src="produtos-padaria.jpg" alt="Produtos">
+        <img class="imagem-banner" src="./img/produtos-padaria.jpg" alt="Produtos">
     </div>
 
     <div class="secao secao-destaque" id="produtos">
@@ -37,14 +37,14 @@
         <p>
             Temos um processo de fabricação 100% caseiro. Esse foi um dos maiores motivos que fizeram com que a Padaria Plus crescesse com as proporções que temos hoje. Temos um pão único de pura qualidade.
         </p>
-        <img class="imagem-produtos" src="paes.jpg" alt="pães">
+        <img class="imagem-produtos" src="./img/paes.jpg" alt="pães">
         <h4>
             Bolos
         </h4>
         <p>
             Uma viagem para a Itália nos fez conhecer alguns ingredientes que são essenciais para que a massa do bolo fique macia e gostosa. Hoje temos um produto incomparável.
         </p>
-        <img class="imagem-produtos" src="bolos.jpg" alt="bolos">
+        <img class="imagem-produtos" src="./img/bolos.jpg" alt="bolos">
     </div>
 
     <div class="secao" id="contato">
